[package]
name = "opennode"
version = "0.1.0"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "API bindings for the Opennode v1 HTTP API"
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/edouardparis/opennode-rs.git"
documentation = "https://docs.rs/opennode/"

[lib]
name = "opennode"

[dependencies]
awc = { version = "0.2.1", features = ["ssl"]}
actix-http = "0.2.5"
serde = { version = "1.0.93", features =["derive"]}
serde_json = "1.0.39"
futures = "0.1.27"


[dev-dependencies]
actix-rt = "0.2.2"
