[package]
name = "opennode"
version = "1.0.0"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "API bindings for the Opennode v1 HTTP API"
readme = "README.md"
edition = "2018"
license = "MIT"
repository = "https://github.com/edouardparis/opennode-rs.git"
documentation = "https://docs.rs/opennode/"

[lib]
name = "opennode"

[workspace]
members = ["opennode-client"]

[dependencies]
serde = { version = "1.0.93", features =["derive"]}
serde_json = "1.0.39"
