[package]
name = "opennode-client"
version = "0.1.0"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Client for the Opennode v1 HTTP API"
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/edouardparis/opennode-rs.git"
documentation = "https://docs.rs/opennode-client/"

[dependencies]
awc = { version = "0.2.1", features = ["ssl"]}
actix-http = "0.2.5"
serde = { version = "1.0.93", features =["derive"]}
serde_json = "1.0.39"
futures = "0.1.27"
opennode = "1.0.0"

[dev-dependencies]
clap = "2.33.0"
actix-rt = "0.2.2"
