[package]
name = "opennode-client"
version = "1.0.0"
authors = ["Edouard Paris <m@edouard.paris>"]
description = "Client for the Opennode v1 HTTP API"
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/edouardparis/opennode-rs.git"
documentation = "https://docs.rs/opennode-client/"

[dependencies]
opennode = "1.0.0"
reqwest = { version = "0.10.0-alpha.2", features = ["json"] }
serde = { version = "1.0.93", features =["derive"]}
serde_json = "1.0.41"

[dev-dependencies]
clap = "2.33.0"
tokio = "0.2.0-alpha.6"
